# ESP32-SmartClock

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  setup_lvgl.bat  setup_lvgl.sh  wav_upload_tool.py  配置指南.md
main/: CMakeLists.txt  Kconfig.projbuild  ai_chat.c  ai_chat.h  audio_data.c  audio_data.h  audio_player.c  audio_player.h  ds3231.c  ds3231.h  ec11.c  ec11.h  get_status_handler  main.c  secrets.h.example  speech_recognition.c  speech_recognition.h  weather_api.c  weather_api.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h  wifi_status_task.c  wifi_status_task.h
